# MT-RRT

./: .gitignore  CMakeLists.txt  MT_RRT.sln  Makefile  README.md  ReadMeExample.cpp  TODO  gpp_make.bat
MT-RRT/: CMakeLists.txt
MT-RRT/header/: Copiable.h  Error.h  Limited.h  Node.h  Problem.h  Tree.h
MT-RRT/header/sampler/: HyperBox.h  Sampler.h
MT-RRT/header/solver/: Solver.h  Strategy.h
MT-RRT/header/strategies/: LinkedTreesStrategy.h  MultiAgentStrategy.h  QueryParallStrategy.h  Serial.h  SerialStrategy.h  SharedTreeStrategy.h
MT-RRT/header/trajectory/: Cost.h  Line.h  LineTrgSaved.h  Trajectory.h  TrajectoryBase.h  TrajectoryComposite.h  TrajectoryFactory.h  TrajectoryManager.h
MT-RRT/src/: Commons.cpp  Commons.h  Node.cpp  Problem.cpp  ProblemBattery.cpp  ProblemBattery.h
MT-RRT/src/sampler/: HyperBox.cpp
MT-RRT/src/solver/: Solver.cpp
MT-RRT/src/strategies/: Serial.cpp  SerialStrategy.cpp
MT-RRT/src/trajectory/: Cost.cpp  EuclideanManager.cpp  Line.cpp  LineTrgSaved.cpp  Trajectory.cpp  TrajectoryBase.cpp  TrajectoryComposite.cpp  TrajectoryFactory.cpp
Samples/: CMakeLists.txt  ReadMe.cpp  ReadMe.md
Samples/01-Points/: CMakeLists.txt  PointProblem.py  ResultMaker.py  Sample-cluttered.cpp  Sample-open.cpp  Sample01.cpp  Sample02-multi-steer.cpp  Sample02.cpp  SamplePoints-01-single-steer.cpp  SamplePoints-01.cpp  SamplePoints-02-compare.cpp  SamplePoints-02-multi-steer.cpp  SamplePointsA-profile.cpp  SamplePointsA.cpp  VisualizeResult.py
Samples/01-Points/problem/: CMakeLists.txt
Samples/01_Point2D/: CMakeLists.txt  Sample01.cpp  Visualizer.py
Samples/01_Point2D/ProblemPoint/: CMakeLists.txt
Samples/01_Point2D/header/: ProblemPoint.h
Samples/01_Point2D/problem/: CMakeLists.txt
Samples/01_Points/: Main.cpp
Samples/01_Points/src/: Problem_points.cpp  Problem_points.h
Samples/02-Manipulators/: CMakeLists.txt  ConfigA  ConfigA-debug  ConfigB  ManipulatorProblem.py  ResultMaker.py  Sample-multi-arms.cpp  Sample-single-arm.cpp  Sample00-config-debug  Sample01-config  Sample01.cpp  SampleManipulators-01-single-arm.cpp  SampleManipulators-02-multi-arms.cpp  SampleManipulators-02-single-arm-compare.cpp  SampleManipulators-03-multi-arms.cpp  SampleManipulatorsA-profile.cpp  SampleManipulatorsA.cpp  SampleManipulatorsB.cpp  VisualizeResult.py
Samples/02-Manipulators/problem/: CMakeLists.txt
Samples/02-Manipulators/provePlot/: Capsule.py  Circle.py
Samples/02_Planar_Robots/01_Single_arm/: Main.cpp  Single_arm.vcxproj.filters
Samples/02_Planar_Robots/02_Multiple_arms/: Main.cpp  problem.json
Samples/02_Planar_Robots/src/: Problem_planar_arms.cpp
Samples/03-Navigation/: CMakeLists.txt  ConfigA  ConfigB  DebugLog.py  Sample00-config  Sample01-config  Sample02-config  SampleNavigation-00-traj-gen.cpp  SampleNavigation-01-open.cpp  SampleNavigation-02-open-compare.cpp  SampleNavigation-03-cluttered.cpp  SampleNavigation-debug.cpp  SampleNavigationA-profile.cpp  SampleNavigationA.cpp  SampleNavigationB.cpp  VisualizeResult.py  VisualizeTrajectories.py
Samples/03-Navigation/problem/: CMakeLists.txt
Samples/03_Navigation/00_GUI/: launcher.sh
Samples/03_Navigation/00__debug_random_traj/: Main.cpp  Show_result.m  build.bat  result.json
Samples/03_Navigation/01_Navigation/: Main.cpp  problem.json
Samples/03_Navigation/02_Navigation_cluttered/: Main.cpp
Samples/03_Navigation/src/: Problem_Navigation.cpp  Problem_Navigation.h  Solution_Interpolator.h
Samples/Geometry/: CMakeLists.txt
Samples/Geometry/header/: Checker.h  Point.h
Samples/Geometry/src/: Common.h  Point.cpp  SegmentPoint.cpp  SegmentSegment.cpp
Samples/NavigationProblems/: NavigationProblemShow.py
Samples/NavigationProblems/scenarios/: Scenario-03.json  Scenario-template.cpp
Samples/PlanarRobotsProblems/scenarios/: Scenario-01.json  Scenario-02.json  Scenario-template.cpp
Samples/Utils/: CMakeLists.txt  Parser.py  Utils.py  Visualizer.py
Samples/Utils/header/: Importer.h  Interpolator.h  JSONstream.h  Logger.h  PI.h  Point.h  SampleDescription.h  SampleFramework.h
Samples/Utils/src/: Importer.cpp  Interpolator.cpp  JSONstream.cpp  Logger.cpp  Point.cpp  SampleFramework.cpp
Samples/src/: GUI_Server.h  Log.h  Solve.h
Samples/src_JS/: profile.html
Samples/src_JS/src/: Connection.js  popup.js
Samples/src_Py/: main.py
samples/: CMakeLists.txt  ReadMe.cpp  ReadMe.md
samples/NavigationProblems/: CMakeLists.txt  NavigationProblemShow.py
samples/NavigationProblems/scenarios/: CMakeLists.txt  Scenario-01.json  Scenario-02.json  Scenario-03.json  Scenario-template.cpp
samples/NavigationProblems/src/: CMakeLists.txt
samples/PlanarRobotsProblems/: CMakeLists.txt  PlanarRobotsProblem.cpp  PlanarRobotsProblem.h  PlanarRobotsShow.py  ReadMe.md
samples/PlanarRobotsProblems/scenarios/: CMakeLists.txt  Scenario-01.json  Scenario-02.json  Scenario-03.json  Scenario-04.json  Scenario-template.cpp
samples/PlanarRobotsProblems/src/: CMakeLists.txt
samples/Trivial2DProblems/: CMakeLists.txt  Scenario-01.cpp  Scenario-02.cpp  TrivialProblem.cpp  TrivialProblem.h
samples/TrivialProblems/: CMakeLists.txt  ReadMe.md  TrivialProblemShow.py
samples/TrivialProblems/scenarios/: CMakeLists.txt  Scenario-01.cpp  Scenario-01.json  Scenario-02.cpp  Scenario-02.json  Scenario-template.cpp
samples/TrivialProblems/src/: CMakeLists.txt
samples/TrivialProblems/test-scenarios/: CMakeLists.txt
samples/configurations/: CMakeLists.txt
samples/configurations/header/: Configurations.h
samples/framework/: CMakeLists.txt
samples/utils/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/core/: CMakeLists.txt  terraform.json
src/multi-threaded/: CMakeLists.txt  terraform.json
utils/: CMakeLists.txt
utils-log/: CMakeLists.txt
utils-log/header/: JsonConvert.h  Logger.h
utils-log/src/: JsonConvert.cpp  Logger.cpp  ShowPost.py  ShowPre.py
utils/header/: JsonConvert.h  Logger.h  PointProblem.h  PointProblemScenarios.h
utils/src/: JsonConvert.cpp  Logger.cpp  PointProblem.cpp  PointProblemScenarios.cpp  PointProblemShow.py
utils/test/: PointProblemTests.cpp
(+1053 files in other folders)
